# To-Proyecto-Asteroids

./: CMakeLists.txt  README.md  asteroids.cpp  finalto2.sln  finalto2.vcxproj  main  main.cpp  trash_recollector.cpp
src/: main.cpp
x64/Debug/: finalto2.exe.recipe  finalto2.ilk  finalto2.vcxproj.FileListAbsolute.txt  vc143.idb
x64/Debug/finalto2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  finalto2.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
